--- a/package.json
+++ b/package.json
@@ -16,15 +16,16 @@
     "koa-route" : "next",
     "koa-static" : "3.0.0",
     "koa-favicon" : "next",
-    "require-dir" : "0.3.0",
+    "koa-compress" : "next",
+    "require-dir" : "0.3.1",
     "hdf5ws" : "file:../hdf5.ws"
   },
   "devDependencies" : {
-    "mathjs" : "3.3.0",
+    "mathjs" : "3.8.0",
     "xml2js" : "0.4.17",
-    "mocha" : "2.5.3",
-    "co-mocha" : "1.1.2",
-    "should" : "9.0.2"
+    "mocha" : "3.2.0",
+    "co-mocha" : "1.1.3",
+    "should" : "11.1.1"
   },
   "contributors" : [ "Roger I Martin <mathmldashx@yahoo.com> (https://github.com/rimmartin/)" ],
   "license" : "MIT",
