--- a/package.json
+++ b/package.json
@@ -12,20 +12,20 @@
   },
   "dependencies": {
     "co": "4.6.0",
-    "koa": "2.5.1",
+    "koa": "2.6.2",
     "koa-route": "next",
-    "koa-static": "4.0.3",
-    "koa-favicon": "next",
-    "koa-compress": "next",
-    "require-dir": "1.0.0",
+    "koa-static": "5.0.0",
+    "koa-favicon": "2.0.1",
+    "koa-compress": "3.0.0",
+    "require-dir": "1.1.0",
     "hdf5": "HDF-NI/hdf5.node",
     "hdf5ws": "HDF-NI/hdf5.ws"
   },
   "devDependencies": {
-    "mathjs": "4.3.0",
+    "mathjs": "5.2.3",
     "xml2js": "0.4.19",
     "mocha": "5.2.0",
-    "should": "13.2.1"
+    "should": "13.2.3"
   },
   "contributors": [
     "Roger I Martin <mathmldashx@yahoo.com> (https://github.com/rimmartin/)"
